<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_server_view"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_peer"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textSize="24sp" />

    <!--  添加对端ip的控件组  -->
    <LinearLayout
        android:id="@+id/linearLayoutIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24sp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peer_ip"
            />
        <EditText
            android:id="@+id/ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:autofillHints=""
            android:hint="@string/input_peer_ip"
            android:inputType="text"/>
    </LinearLayout>

    <!--  本机开放的端口  -->
    <LinearLayout
        android:id="@+id/linearLayoutPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_opened" />

        <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:autofillHints=""
            android:hint="@string/opened_port_str"
            android:inputType="number" />
    </LinearLayout>

    <!--  添加按钮  -->
    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        android:textColor="@color/buttonTextColor" />

</LinearLayout>